--- a/jessswann.html
+++ b/jessswann.html
@@ -277,20 +277,20 @@
                 <div class="col-lg-4 mt-2">
                     <a href="img/jessSwann/Wireframe- About_1024.jpg" data-fancybox="jessWireframe"
                         data-caption="Wireframe of About me page">
-                        <img src="img/jessSwann/Wireframe- About_1024.jpg" alt="Wireframe of About me page"
+                        <img src="img/jessSwann/Wireframe- About_1024.jpg" class="border" alt="Wireframe of About me page"
                             width="100%">
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 mt-2">
                     <a href="img/jessSwann/Wireframe- Home2_1024.jpg" data-fancybox="jessWireframe"
                         data-caption="Wireframe of Home page">
-                        <img src="img/jessSwann/Wireframe- Home2_1024.jpg" alt="Wireframe of Home page" width="100%">
+                        <img src="img/jessSwann/Wireframe- Home2_1024.jpg" class="border" alt="Wireframe of Home page" width="100%">
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 mt-2">
                     <a href="img/jessSwann/Wireframe- Home3_1024.jpg" data-fancybox="jessWireframe"
                         data-caption="Wireframe of Home page #2 ">
-                        <img src="img/jessSwann/Wireframe- Home3_1024.jpg" alt="Wireframe of Home page #2" width="100%">
+                        <img src="img/jessSwann/Wireframe- Home3_1024.jpg" class="border" alt="Wireframe of Home page #2" width="100%">
                     </a>
                 </div>
 
@@ -310,40 +310,40 @@
                 <div class="col-lg-4 col-sm-6 mt-2">
                     <a href="img/jessSwann/Mockup-Program3_1024.jpg" data-fancybox="jessMockup"
                         data-caption="Mockup of Shop page #1 ">
-                        <img src="img/jessSwann/Mockup-Program3_1024.jpg" alt="Mockup of Shop page 1" width="100%">
+                        <img src="img/jessSwann/Mockup-Program3_1024.jpg" class="border" alt="Mockup of Shop page 1" width="100%">
                     </a>
                 </div>
 
                 <div class="col-lg-4 col-sm-6 mt-2">
                     <a href="img/jessSwann/Mockup-Program_1024.jpg" data-fancybox="jessMockup"
                         data-caption="Mockup of Shop page #2">
-                        <img src="img/jessSwann/Mockup-Program_1024.jpg" alt="Mockup of Shop page #2" width="100%">
+                        <img src="img/jessSwann/Mockup-Program_1024.jpg" class="border" alt="Mockup of Shop page #2" width="100%">
                     </a>
                 </div>
 
                 <div class="col-lg-4 col-sm-6 mt-2">
                     <a href="img/jessSwann/Mockup-Recipes_1024.jpg" data-fancybox="jessMockup"
                         data-caption="Mockup of Recipe page">
-                        <img src="img/jessSwann/Mockup-Recipes_1024.jpg" alt="Mockup of Recipe page" width="100%">
+                        <img src="img/jessSwann/Mockup-Recipes_1024.jpg" class="border" alt="Mockup of Recipe page" width="100%">
                     </a>
                 </div>
 
                 <div class="col-lg-4 col-sm-6 mt-4">
                     <a href="img/jessSwann/Mockup-About2_1024.jpg" data-fancybox="jessMockup"
                         data-caption="Mockup of About page #1">
-                        <img src="img/jessSwann/Mockup-About2_1024.jpg" alt="Mockup of About page #1" width="100%">
+                        <img src="img/jessSwann/Mockup-About2_1024.jpg" class="border" alt="Mockup of About page #1" width="100%">
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 mt-4">
                     <a href="img/jessSwann/Mockup-About6_1024.jpg" data-fancybox="jessMockup"
                         data-caption="Mockup of About page #2">
-                        <img src="img/jessSwann/Mockup-About6_1024.jpg" alt="Mockup of About page #2" width="100%">
+                        <img src="img/jessSwann/Mockup-About6_1024.jpg" class="border" alt="Mockup of About page #2" width="100%">
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 mt-4">
                     <a href="img/jessSwann/Mockup-Blog2_1024.jpg" data-fancybox="jessMockup"
                         data-caption="Mockup of Blog page ">
-                        <img src="img/jessSwann/Mockup-Blog2_1024.jpg" alt="Mockup of Blog page" width="100%">
+                        <img src="img/jessSwann/Mockup-Blog2_1024.jpg" class="border" alt="Mockup of Blog page" width="100%">
                     </a>
                 </div>
 
