--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white" >
+    <nav class="navbar navbar-expand-md navbar-light fixed-top bg-white">
         <a class="navbar-brand" href="index.html"><img src="img/logo.png" width="180px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,13 +52,13 @@
         </div>
     </nav>
     <!--Introduction-->
-    
+
     <div class="container">
         <div class="row">
             <div class="col-lg-5">
                 <p class="main-sub">UI/UX Designer | Brisbane</p>
                 <p class="main-subtitle">I apply my creative thinking to solve business problems.</p>
-                <a class="btn btn-lg email-button" href="mailto:ianwongcontact@gmail.com" role="button">Email Me Now</a>
+                <a class="btn btn-lg email-button" href="mailto:ianwongcontact@gmail.com" role="button">Contact Me</a>
 
             </div>
 
@@ -82,9 +82,9 @@
             <div class="col-lg-12 mt-5" data-aos="fade-up">
                 <div class="main-subheading">Jess Swann: PT Website</div>
                 <p class="content-text">This is an website for a client that needed a company website for her personal
-                    training business. Jess requested a site where she can give a link to people who wants more
-                    information about herself. It is also a place where she can sell her products online as well as
-                    inspire people to cook some of her recipes.</p>
+                    training business. Jess requested a site where she can promote and let people find more
+                    information about herself and her business Habit Health and Fitness. It is also a place where she
+                    can sell her products online as well as inspire people to cook some of her recipes.</p>
                 <a class="btn info-button" href="jessswann.html" role="button">See More Information</a>
             </div>
             <div class="col-lg-2"></div>
@@ -129,7 +129,7 @@
             </div>
 
             <!--QAAFI-->
-            <div class="col-lg-12 mt-5" data-aos="fade-up" >
+            <div class="col-lg-12 mt-5" data-aos="fade-up">
                 <div class="main-subheading">QAAFI: Staff Seating and Movement Management</div>
                 <p class="content-text">The Staff Seating and Movement Management is a web application that allows
                     for an administrator to add employees and assign them to workstations for the visualisation of
