--- a/index.html
+++ b/index.html
@@ -167,10 +167,11 @@
                     products in different fields and increase my design skills.
                 </p>
             </div>
-            <div class="col-lg-3 my-3" data-aos="fade-up">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8 my-3" data-aos="fade-up">
                 <a href="img/uiDesign/dominate/dominate.png" data-fancybox="dominate"
                     data-caption="Home screen of Dominate">
-                    <img src="img/uiDesign/dominate/dominate.png" alt="Sketch of Home screen of Dominate" width="100%"
+                    <img src="img/uiDesign/dominate/Dominate Cover.jpeg" alt="Sketch of Home screen of Dominate" width="100%"
                         class="border">
                 </a>
                 <a href="img/uiDesign/dominate/Programs.png" data-fancybox="dominate" data-caption="Programs Screen">
@@ -188,11 +189,12 @@
                 </a>
 
             </div>
-
-            <div class="col-lg-3 my-3" data-aos="fade-up">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-2"></div>
+            <div class="col-lg-8 my-3" data-aos="fade-up">
                 <a href="img/uiDesign/staySpot/staySpot.png" data-fancybox="staySpot"
                     data-caption="Home screen of StaySpot">
-                    <img src="img/uiDesign/staySpot/staySpot.png" alt="Sketch of Home screen of StaySpot" width="100%"
+                    <img src="img/uiDesign/staySpot/Stay spot cover.jpeg" alt="Sketch of Home screen of StaySpot" width="100%"
                         class="border">
                 </a>
                 <a href="img/uiDesign/staySpot/Search Results.png" data-fancybox="staySpot"
